--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link href="lib/font-awesome.min.css" rel="stylesheet">
 <link href="app/css/app.css" type="text/css" rel="stylesheet"/>
 <link href="app/directives/numpad/numpad.css" type="text/css" rel="stylesheet"/>
+<script src="phonegap.js"></script>
     </head>
     <body>
         <div class="container-fluid">
