--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <script type="text/javascript" src="app/app.js"></script>
         
         <script type="text/javascript" src="app/directives/numpad/numpad.js"></script>
+        <script type="text/javascript" src="app/directives/camera/camera.js"></script>
         
         <script type="text/javascript" src="app/services/login-manager.js"></script>
         <script type="text/javascript" src="app/services/account-manager.js"></script>
