--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link href="app/css/app.css" type="text/css" rel="stylesheet"/>
 <link href="app/directives/numpad/numpad.css" type="text/css" rel="stylesheet"/>
 <script src="phonegap.js"></script>
+<script src="barcodescanner.js"></script>
     </head>
     <body>
         <div class="container-fluid">
@@ -36,6 +37,7 @@
         
         <script type="text/javascript" src="app/services/login-manager.js"></script>
         <script type="text/javascript" src="app/services/account-manager.js"></script>
+        <script type="text/javascript" src="app/services/scanner.js"></script>
         
         <script type="text/javascript" src="app/controllers/home.js"></script>
         <script type="text/javascript" src="app/controllers/login.js"></script>
